--- a/src/styles/modules/culc.scss
+++ b/src/styles/modules/culc.scss
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
 }
-%family-Inter {
+%font-text {
     font-family: 'Inter';
 	font-style: normal;
 }
@@ -14,7 +14,7 @@ $text-color1: #66513D;
 $text-color2: white;
 $display: grid;
 .culc_header {
-	@extend %family-Inter;
+	@extend %font-text;
 	font-weight: 700;
 	font-size: 51px;
 	line-height: 62px;
@@ -24,7 +24,7 @@ $display: grid;
 	margin-bottom: 50px;
 }
 .culc_p {
-	@extend %family-Inter;
+	@extend %font-text;
 	font-weight: 600;
 	font-size: 43px;
 	line-height: 52px;
